# Project

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONFIG.h  Doxyfile  README.md
SavedMaps/: map1.json  map2.json
docs/html/: _armor_8h_source.html  _asset_manager_8cpp.html  _asset_manager_8cpp__incl.dot  _asset_manager_8h.html  _asset_manager_8h__dep__incl.dot  _asset_manager_8h__incl.dot  _asset_manager_8h_source.html  _backpack_8h_source.html  _belt_8h_source.html  _boots_8h_source.html  _bully_builder_8h_source.html  _c_o_n_f_i_g_8h.html  _c_o_n_f_i_g_8h__dep__incl.dot  _c_o_n_f_i_g_8h_source.html  _campaign_8h_source.html  _character_8h.html  _character_8h__dep__incl.dot  _character_8h__incl.dot  _character_8h_source.html  _character_builder_8h_source.html  _character_creator_8h_source.html  _character_director_8h_source.html  _character_observer_8cpp.html  _character_observer_8cpp__incl.dot  _character_observer_8h.html  _character_observer_8h.js  _character_observer_8h__dep__incl.dot  _character_observer_8h__incl.dot  _character_observer_8h_source.html  _character_strategy_8cpp.html  _character_strategy_8cpp__incl.dot  _character_strategy_8h_source.html  _dice_8h.html  _dice_8h.js  _dice_8h__dep__incl.dot  _dice_8h__incl.dot  _dice_8h_source.html  _door_8h_source.html  _game_loopty_loop_8cpp.html  _game_loopty_loop_8cpp__incl.dot  (+863 more)
docs/latex/: _armor_8h_source.tex  _asset_manager_8cpp.tex  _asset_manager_8cpp.tex.tmp  _asset_manager_8cpp__incl.dot  _asset_manager_8h.tex  _asset_manager_8h__dep__incl.dot  _asset_manager_8h__incl.dot  _asset_manager_8h_source.tex  _backpack_8h_source.tex  _belt_8h_source.tex  _boots_8h_source.tex  _bully_builder_8h_source.tex  _c_o_n_f_i_g_8h.tex  _c_o_n_f_i_g_8h__dep__incl.dot  _c_o_n_f_i_g_8h_source.tex  _campaign_8h_source.tex  _character_8h.tex  _character_8h__dep__incl.dot  _character_8h__incl.dot  _character_8h_source.tex  _character_builder_8h_source.tex  _character_creator_8h_source.tex  _dice_8h.tex  (+547 more)
include/: LogObservable.h
src/: driver.cpp
tests/: ItemsTest.cpp
(+195 files in other folders)
